[package]
name = "testmark"
version = "0.1.0"
authors = ["dcmox <dancmox@comcast.net>"]
edition = "2018"
description = "A benchmark utility for the Rust programming language"
license = "MIT"
readme = "README.md"
keywords = ["benchmark", "testmark"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level=2